# honerau-project

configs/: LS1088A_Important_Commands.txt  README.md
configs/etc/: udhcpd.conf
configs/etc/init.d/: udhcpd
etc/: Updated hostapd.conf  fsl-ls1088a-rdb.dtb  hostapd.conf  wifi-init.sh
etc/conf/: hostapd.conf  minimal-hostapd.conf  radiusd.conf
etc/init.d/: hostapd
etc/network/: interfaces
honerau-project_attempttoencrypt/etc/conf/: local.conf  wpa_supplicant.conf
honerau-project_attempttoencrypt/etc/init.d/: S40wifi  radiusd
honerau-project_attempttoencrypt/etc/manifest/: manifest.txt
honerau-project_attempttoencrypt/etc/network/: interfaces
honerau-project_attempttoencrypt/uri-bt/: CMakeLists.txt
honerau-project_attempttoencrypt/uri-bt/src/: adapter.h  agent.old  gatt.c  gatt.old
uri-bt/: CMakeLists.txt
uri-bt/src/: adapter.c  adapter.h  advertising.c  agent.c  agent.h  gatt.c  gatt.h  main.c
uri-bt/uri-bt/src/: adapter.c  advertising.h  agent.c  main.c
